Added the Add New Channel Activity and Layout Class

--- a/iFlipout/Veritra/res/values/strings.xml
+++ b/iFlipout/Veritra/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, HelloScribd!</string>
-    <string name="app_name">iFlipOut</string>
+    <string name="app_name">Veritra</string>
     <string name="intro_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eget felis et magna euismod 
     accumsan. Maecenas elementum lobortis bibendum. Fusce lobortis mauris tristique lectus porta mollis. 
     Suspendisse metus quam, elementum id mollis sit amet, lacinia et nulla. Mauris pellentesque est auctor massa 
